# hamburg-mensa-bot

./: .env.template  Cargo.toml  README.md
src/: main.rs  meals.rs
