[package]
name = "haw-mensa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
chrono = "0.4.19"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = {version = "0.11.18", features = ["json"] }
scraper = "0.17.1"
serde = "1.0.183"
regex = "1.5.4"